tests/spec/emit/snapshots/propagate_on_variable.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<int> {
    let x: Option<int> = Some(42);
    let y = x?;
    Some(y + 1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (int, bool) {
	x := lisette.MakeOptionSome(42)
	if x.Tag != lisette.OptionSome {
		return 0, false
	}
	y := x.SomeVal
	return y + 1, true
}
