tests/spec/emit/snapshots/propagate_on_variable_in_expression.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nfn test() -> Option<int> {\n  let x: Option<int> = Some(10);\n  Some(x? + 1)\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (int, bool) {
	x := lisette.MakeOptionSome(10)
	if x.Tag != lisette.OptionSome {
		return *new(int), false
	}
	return x.SomeVal + 1, true
}
