tests/spec/emit/snapshots/propagate_rebind_uses_old_binding_in_rhs.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn parse(s: string) -> Result<int, error> {
    strconv.Atoi(s)
  }
  
  fn process() -> Result<int, error> {
    let x = 42
    let x = parse(f"{x}")?
    Ok(x + 1)
  }
---
package main

import (
	"fmt"
	"strconv"
)

func parse(s string) (int, error) {
	return strconv.Atoi(s)
}

func process() (int, error) {
	x := 42
	x_1, err := parse(fmt.Sprint(x))
	if err != nil {
		return 0, err
	}
	return x_1 + 1, nil
}
