tests/spec/emit/snapshots/propagate_simple.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn might_fail() -> Result<int, string> {
    Ok(42)
  }
  
  fn get_value() -> Result<int, string> {
    let result = might_fail()?;
    Ok(result)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mightFail() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}

func getValue() lisette.Result[int, string] {
	check_1 := mightFail()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	result := check_1.OkVal
	return lisette.MakeResultOk[int, string](result)
}
