tests/spec/emit/snapshots/propagate_unused_binding_option.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn maybe() -> Option<int> { Some(1) }
  
  fn test() -> Option<()> {
    let _x = maybe()?
    Some(())
  }
---
package main

func maybe() (int, bool) {
	return 1, true
}

func test() (struct{}, bool) {
	if _, ok := maybe(); !ok {
		return struct{}{}, false
	}
	return struct{}{}, true
}
