tests/spec/emit/snapshots/propagate_unused_binding_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn fallible() -> Result<int, string> { Ok(1) }
  
  fn test() -> Result<(), string> {
    let _x = fallible()?
    Ok(())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func fallible() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](1)
}

func test() lisette.Result[struct{}, string] {
	check := fallible()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check.ErrVal)
	}
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}
