tests/spec/emit/snapshots/propagate_widens_concrete_error_in_lowered_return.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct ValidationError { field: string }
  
  impl ValidationError {
    fn Error(self) -> string { f"{self.field}: required" }
  }
  
  fn validate(name: string) -> Result<string, ValidationError> {
    if name == "" { return Err(ValidationError { field: "name" }) }
    Ok(name)
  }
  
  fn load(name: string) -> Result<string, error> {
    let n = validate(name)?
    Ok(n)
  }
  
  fn test() {
    match load("") {
      Ok(_) => panic("expected error"),
      Err(e) => {
        if e.Error() != "name: required" {
          panic("wrong widened error")
        }
      },
    }
    match load("ada") {
      Ok(v) => {
        if v != "ada" {
          panic("wrong ok value")
        }
      },
      Err(_) => panic("expected ok"),
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type ValidationError struct {
	field string
}

func (v ValidationError) Error() string {
	return v.field + ": required"
}

func validate(name string) lisette.Result[string, ValidationError] {
	if name == "" {
		return lisette.MakeResultErr[string, ValidationError](ValidationError{field: "name"})
	}
	return lisette.MakeResultOk[string, ValidationError](name)
}

func load(name string) (string, error) {
	check := validate(name)
	if check.Tag != lisette.ResultOk {
		return "", check.ErrVal
	}
	n := check.OkVal
	return n, nil
}

func test() {
	if _, e := load(""); e == nil {
		panic("expected error")
	} else {
		if e.Error() != "name: required" {
			panic("wrong widened error")
		}
	}
	if v, err := load("ada"); err == nil {
		if v != "ada" {
			panic("wrong ok value")
		}
	} else {
		panic("expected ok")
	}
}
