tests/spec/emit/snapshots/propagate_widens_in_prelude_callback_lambda.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct ParseError { text: string }
  
  impl ParseError {
    fn Error(self) -> string { f"bad: {self.text}" }
  }
  
  fn parse_word(w: string) -> Result<int, ParseError> {
    if w == "x" { Err(ParseError { text: w }) } else { Ok(w.length()) }
  }
  
  fn test() {
    let words = ["one", "x"]
    let parsed = words.map(|w| -> Result<int, error> {
      let n = parse_word(w)?
      Ok(n)
    })
    match parsed[0] {
      Ok(n) => {
        if n != 3 {
          panic("wrong parsed length")
        }
      },
      Err(_) => panic("expected ok"),
    }
    match parsed[1] {
      Ok(_) => panic("expected error"),
      Err(e) => {
        if e.Error() != "bad: x" {
          panic("wrong lambda error")
        }
      },
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type ParseError struct {
	text string
}

func (p ParseError) Error() string {
	return "bad: " + p.text
}

func parseWord(w string) lisette.Result[int, ParseError] {
	if w == "x" {
		return lisette.MakeResultErr[int, ParseError](ParseError{text: w})
	}
	return lisette.MakeResultOk[int, ParseError](len(w))
}

func test() {
	words := []string{"one", "x"}
	parsed := lisette.SliceMap(words, func(w string) lisette.Result[int, error] {
		check := parseWord(w)
		if check.Tag != lisette.ResultOk {
			return lisette.MakeResultErr[int, error](check.ErrVal)
		}
		n := check.OkVal
		return lisette.MakeResultOk[int, error](n)
	})
	subject := parsed[0]
	if subject.Tag == lisette.ResultOk {
		if subject.OkVal != 3 {
			panic("wrong parsed length")
		}
	} else {
		panic("expected ok")
	}
	subject_1 := parsed[1]
	if subject_1.Tag == lisette.ResultOk {
		panic("expected error")
	}
	if subject_1.ErrVal.Error() != "bad: x" {
		panic("wrong lambda error")
	}
}
